# HandsFree

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
src/: __init__.py  audio_utils.py  config.py  library.py
src/extraction/: __init__.py  extractor.py  preprocessor.py
src/narration/: __init__.py  book_profiler.py  emotion_tagger.py  script_writer.py  style_director.py
src/tts/: __init__.py  styletts2_engine.py  tts_engine.py  xtts_engine.py
tests/: test_extraction.py  test_tts.py
